overflow-x fix style.css

--- a/style.css
+++ b/style.css
@@ -644,5 +644,25 @@ body{
 @media (max-width:450px){
     html{
         font-size: 50%;
+        overflow-x: hidden;
     }
+    .text-blk.heading {
+        font-size: 25px;
+        line-height: 45px;
+        font-weight: 800;
+        margin-top: 0px;
+        margin-right: 0px;
+        margin-bottom: 30px;
+        margin-left: 0px;
+      }
+      
+      .text-blk.subHeading {
+        text-align: center;
+        font-size: 10px;
+        line-height: 26px;
+        margin-top: 0px;
+        margin-right: 0px;
+        margin-bottom: 60px;
+        margin-left: 0px;
+      }
 }
